# fastembed-rs

./: Cargo.toml  README.md
src/: lib.rs
src/models/: quantization.rs
src/output/: output_precedence.rs
tests/: optimum_cli_export.rs
