[package]
name = "fastembed"
version = "5.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "Library for generating vector embeddings, reranking locally."
license = "Apache-2.0"
authors = [
  "Anush008 <anushshetty90@gmail.com>",
  "Josh Niemelä <josh@jniemela.dk>",
  "GrisiaEvy <a115020115@gmail.com>",
  "George MacKerron <georgemackerron@neon.tech>",
  "Timon Vonk <mail@timonv.nl>",
  "Luya Wang <luya.wang@qq.com>",
  "Tri <tri@triandco.com>",
  "Denny Wong <denwong47@hotmail.com>",
  "Alex Rozgo <alex.rozgo@gmail.com>",
]
documentation = "https://docs.rs/fastembed"
repository = "https://github.com/Anush008/fastembed-rs"
homepage = "https://crates.io/crates/fastembed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1" }
hf-hub = { version = "0.4.3", default-features = false, optional = true }
image = "0.25.8"
ndarray = { version = "0.17", default-features = false }
ort = { git = "https://github.com/pykeio/ort", default-features = false, features = [
  "ndarray", "std"
] }
serde_json = { version = "1" }
tokenizers = { version = "0.22.1", default-features = false, features = ["onig"] }

[features]
default = ["ort-download-binaries", "hf-hub-rustls-tls"]

hf-hub = ["dep:hf-hub", "hf-hub?/ureq"]
hf-hub-native-tls = ["hf-hub", "hf-hub?/native-tls"]
hf-hub-rustls-tls = ["hf-hub", "hf-hub?/rustls-tls"]

ort-download-binaries = ["ort/download-binaries", "ort/tls-rustls"]
ort-download-binaries-native = ["ort/download-binaries", "ort/tls-native"]
ort-load-dynamic = ["ort/load-dynamic"]
ort-native-tls = ["ort/tls-native"]
ort-rustls = ["ort/tls-rustls"]

# This feature does not change any code, but is used to limit tests if
# the user does not have `optimum-cli` or even python installed.
optimum-cli = []

# For compatibility recommend using hf-hub-native-tls
online = ["hf-hub-native-tls"]
